--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^8.2.0",
         "ejs": "^2.7.1",
         "express": "^4.17.1",
-        "mysql2": "^2.0.0"
+        "mysql2": "^2.0.0",
+        "sequelize": "^5.21.1"
     }
 }
