--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "nodemon": "^1.19.3"
+        "eslint": "^6.6.0",
+        "eslint-config-prettier": "^6.6.0",
+        "eslint-plugin-prettier": "^3.1.1",
+        "nodemon": "^1.19.3",
+        "prettier": "^1.19.1"
     },
     "dependencies": {
         "dotenv": "^8.2.0",
         "ejs": "^2.7.1",
         "express": "^4.17.1",
+        "mongodb": "^3.3.4",
         "mysql2": "^2.0.0",
         "sequelize": "^5.21.1"
     }
